
[package]
name = "nexcore-compliance"
version = "1.0.0"
edition = "2024"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
license = "LicenseRef-Proprietary"
rust-version = "1.85"
description = "Regulatory compliance engine: SAM.gov integration, OSCAL-inspired DSL, FDA/ICH/CIOMS controls"

[lib]
name = "nexcore_compliance"
path = "src/lib.rs"

[dependencies]
nexcore-error = { workspace = true }
# Workspace dependencies
nexcore-lex-primitiva = { version = "0.1.0", path = "../nexcore-lex-primitiva", registry = "nexcore" }
tracing = { version = "0.1.40" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
nexcore-chrono = { workspace = true }

# HTTP client for SAM.gov API
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
proptest = { version = "1.6.0" }
tempfile = { version = "3.10.1" }


[lints]
workspace = true
